baml_language/crates/baml_cli/src/snapshots/baml_cli__help_command__tests__run_detailed_help.snap
---
source: crates/baml_cli/src/help_command.rs
expression: "normalize_snapshot(&render_for_test(&[\"run\"]))"
---
Run a BAML function, script, or expression.

Choose one execution mode: a positional function or script, one or more `--function` targets, or an
inline `--expression`. Function parameters come after `--` and are parsed by an auto-generated CLI
based on each signature.

Usage: baml run [OPTIONS] [TARGET] [-- <TARGET_ARGS>...]

Examples:
  Run a function:
    baml run main -- --name Ada

  Run multiple functions:
    baml run --function Extract -- Extract --text input.txt

  Evaluate an expression:
    baml run -e '1 + 2'

  Run a standalone file:
    baml run --file script.baml

  List available targets:
    baml run --list

Arguments:
  [TARGET]
          Function or script to run as the sole entry point.

          Mutually exclusive with `--function` and `--expression`.

  [TARGET_ARGS]...
          Arguments for the generated target CLI.

          With `--function`, the first value is the target subcommand name.

Compiler options:
  -F, --features <FEATURES>
          Enable compiler features; repeatable or comma-separated [possible values: beta,
          display_all_warnings]

Target options:
  -f, --function <NAME>
          Add a function to the generated target CLI. Repeatable.

          Unlike a positional target, `--function` always creates a subcommand after `--`, even when
          passed once. Mutually exclusive with `<TARGET>` and `--expression`.

  -e, --expression <EXPRESSION>
          Evaluate a BAML expression.

          Optionally, combine with `--file` or `--project` to make existing BAML functions available
          to the expression.

          Use `-e @file` to read an expression from a file or `-e -` for standard input. Mutually
          exclusive with `<TARGET>` and `--function`.

      --context <SOURCE>
          Set process launch context from JSON.

          Accepts `distinct_id` (string or null) and `metadata` (a map whose values are strings,
          integers, floats, or booleans).

          Use `--context @file` to read JSON from a file or `--context -` for standard input.

      --list
          List runnable targets (scripts, functions)

Project options:
      --file <PATH>
          Load one standalone source file instead of discovering a project.

          Runs its `main` function when no target is supplied. Mutually exclusive with `--project`.

Run output options:
      --output-format <FORMAT>
          Format returned values [default: debug] [possible values: debug, json]

      --log <LEVEL>
          Set the BAML log level; overrides BAML_LOG [default: info] [possible values: off, error,
          warn, info, debug, trace]

      --log-file <LOG_FILE>
          Write CLI diagnostic logs to a file.

          Unrelated to `--log`, which prints BAML `log.*` events to stdout.

      --include-generated
          Include compiler-synthesized functions in `--list` output

Global options:
  -q, --quiet...
          Suppress nonessential output

  -v, --verbose...
          Increase diagnostic verbosity. Repeatable

      --color <WHEN>
          Control ANSI colors [possible values: auto, always, never]

      --no-progress
          Disable progress output

      --directory <PATH>
          Change to this directory before running the command

      --project <PATH>
          Discover the BAML project from this path

      --output-preset <PRESET>
          Select output defaults [default: auto] [possible values: auto, human, agent]

      --hyperlinks <WHEN>
          Control terminal hyperlinks [possible values: auto, always, never]

      --diagnostic-format <FORMAT>
          Select the diagnostic format [possible values: human, agent, concise]

      --agent-skill-check <MODE>
          Control BAML agent skill validation [default: auto] [possible values: auto, require, warn,
          off]

  -h, --help
          Display concise help for this command

Use `baml run <target> -- --help` to display the target's generated arguments.
